basic steps of Module 4 project

--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <section>
+    <h1>Erik Trethewey</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="Contact.html">Contact</a>
+            <a href="projects.html">Projects</a>
+        </nav>
+    </section>    
+    <section>
+    <img src="118358729_2754926151410713_4618262042568289918_n.jpg" alt="">      
+    <h2>Erik Trethewey</h2>
+    <p>My jornery with coding started out just by stumbling on how to mod video games. I never wrote the code to my video games but used mods other people created. My computer at the time wasn't able to handle the code from the new mods. So, it was time to upgrade. I then spent 9 months saving and learning how to build a pc from scratch. After completing that I realized how truely passionate I am about computers and decided to go deeper. I fell into coding from her on. I will never look back on that decision to become Web Devloper. </p>
+    </section> 
+    <section>
+
+    </section>
+    <footer>
+
+    </footer>
+
+
+
 </body>
 </html>
