middle of the project

--- a/index.html
+++ b/index.html
@@ -1,29 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <link href="style/index.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <section>
-    <h1>Erik Trethewey</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="Contact.html">Contact</a>
-            <a href="projects.html">Projects</a>
-        </nav>
+    <section class="e">
+        <h1>Erik Trethewey</h1>
+            <nav>
+            <a class="button" href="index.html">Home</a><a class="button" href="about.html">About</a><a class="button" href="Contact.html">Contact</a><a class="button" href="Contact.html">Contact</a>
+            </nav>
     </section>    
-    <section>
-    <img src="118358729_2754926151410713_4618262042568289918_n.jpg" alt="">      
-    <h2>Erik Trethewey</h2>
-    <p>My jornery with coding started out just by stumbling on how to mod video games. I never wrote the code to my video games but used mods other people created. My computer at the time wasn't able to handle the code from the new mods. So, it was time to upgrade. I then spent 9 months saving and learning how to build a pc from scratch. After completing that I realized how truely passionate I am about computers and decided to go deeper. I fell into coding from her on. I will never look back on that decision to become Web Devloper. </p>
-    </section> 
-    <section>
-
+    <section class="b">
+        <img class="a" src="118358729_2754926151410713_4618262042568289918_n.jpg" alt=""> 
+        <div class="c">     
+        <h2>Erik Trethewey</h2>
+        <p class="d">My jornery with coding started out just by stumbling on how to mod video games. I never wrote the code to my video games but used mods other people created. My computer at the time wasn't able to handle the code from the new mods. So, it was time to upgrade. I then spent 9 months saving and learning how to build a pc from scratch. After completing that I realized how truely passionate I am about computers and decided to go deeper. I fell into coding from her on. I will never look back on that decision to become Web Devloper. </p>
+        </div>
     </section>
+
+    <section>
+            <div class="f">
+                <img class="container" src="christian-wiediger-c3ZWXOv1Ndc-unsplash (1).jpg" alt="">
+
+                <img class="container" src="christian-wiediger-u03OCRlSd2M-unsplash.jpg" alt="">
+
+                <img class="container" src="amine-rock-hoovr-qoeU4a6psaQ-unsplash (1).jpg" alt="">
+                     
+                <img class="container" src="reina-kousaka-zPHftoPajis-unsplash.jpg" alt="">
+            </div>
+
+            <div class="g">
+                <img class="container" src="ella-don-s3cSol6Y6eY-unsplash.jpg" alt="">    
+                <img class="container" src="wes-hicks-VZNYO4suM5o-unsplash.jpg" alt="">
+
+                <img class="container" src="marcela-laskoski-YrtFlrLo2DQ-unsplash.jpg" alt="">
+
+                <img class="container" src="marius-masalar-rPOmLGwai2w-unsplash.jpg" alt="">
+            </div>
+
     <footer>
 
     </footer>
