--- a/index.html
+++ b/index.html
@@ -23,12 +23,17 @@
 
     <section>
             <div class="f">
+                <div class="h">
                 <img class="container" src="christian-wiediger-c3ZWXOv1Ndc-unsplash (1).jpg" alt="">
-
+                <h3>My CPU</h3>
+                </div>  
+                <div class="h">
                 <img class="container" src="christian-wiediger-u03OCRlSd2M-unsplash.jpg" alt="">
+                <h3>I have a Gigabyte<br> Radeon x580</h3>
+                </div>
 
                 <img class="container" src="amine-rock-hoovr-qoeU4a6psaQ-unsplash (1).jpg" alt="">
-                     
+
                 <img class="container" src="reina-kousaka-zPHftoPajis-unsplash.jpg" alt="">
             </div>
 
