--- a/index.html
+++ b/index.html
@@ -61,10 +61,20 @@
                 <h3>I played the flute <br> in high school marching band.</h3>
                 </div>
             </div>
+            <br>
+            <br>
+            <br>
 </section>
-    <footer>
+<section>
+            <footer>
+                <div class="j">
+                    <h3>Like what you see?</h3>
+                    <br>
+                    <a class="button3" href="Contact.html">Contact</a><a href="https://www.facebook.com/">Facebook</a><a href="https://www.instagram.com/">Instagram</a><a href="https://twitter.com/home">Twitter</a>
+                </div>    
+            </footer>
 
-    </footer>
+</section>
 
 
 
