--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="c">     
         <h2>Erik Trethewey</h2>
         <a class="button2" href="Projects.html">My Projects</a>
-        <p class="d">My jornery with coding started out just by stumbling on how to mod video games. I never wrote the code to my video games but used mods other people created. My computer at the time wasn't able to handle the code from the new mods. So, it was time to upgrade. I then spent 9 months saving and learning how to build a pc from scratch. After completing that I realized how truely passionate I am about computers and decided to go deeper. I fell into coding from her on. I will never look back on that decision to become Web Devloper. </p>
+        <p class="d">My journey with coding started out just by stumbling on how to mod video games. I never wrote the code to my video games but used mods other people created. My computer at the time wasn't able to handle the code from the new mods. So, it was time to upgrade. I then spent 9 months saving and learning how to build a pc from scratch. After completing that I realized how truely passionate I am about computers and decided to go deeper. I fell into coding from her on. I will never look back on that decision to become Web Devloper. </p>
         </div>
     </section>
 
