changed the nav colors, working on content

--- a/index.html
+++ b/index.html
@@ -7,65 +7,73 @@
     <title>Document</title>
 </head>
 <body>
-    <section class="e">
+    <header class="header">
         <h1>Erik Trethewey</h1>
             <nav>
             <a class="button" href="index.html">Home</a><a class="button" href="about.html">About</a><a class="button" href="Contact.html">Contact</a><a class="button" href="Projects.html">Projects</a>
             </nav>
-    </section>
-<section class="i">    
+        </header>
+   
+
+        <section class="MainImg">
+            
+        </section>    
+<section class="i"> 
+    <!-- <section class= "MainImg">
+            
+    </section> -->
     <section class="b">
-        <img class="a" src="118358729_2754926151410713_4618262042568289918_n.jpg" alt=""> 
         <div class="c">     
         <h2>Erik Trethewey</h2>
         <a class="button2" href="Projects.html">My Projects</a>
-        <p class="d">My journey with coding started out just by stumbling on how to mod video games. I never wrote the code to my video games but used mods other people created. My computer at the time wasn't able to handle the code from the new mods. So, it was time to upgrade. I then spent 9 months saving and learning how to build a pc from scratch. After completing that I realized how truely passionate I am about computers and decided to go deeper. I fell into coding from her on. I will never look back on that decision to become Web Devloper. </p>
+        <p>My journey with coding started out just by stumbling on how to mod video games. I never wrote the code to my video games but used mods other people created. My computer at the time wasn't able to handle the code from the new mods. So, it was time to upgrade. I then spent 9 months saving and learning how to build a pc from scratch. After completing that I realized how truely passionate I am about computers and decided to go deeper. I fell into coding from that point on. I will never look back on that decision to become Web Devloper. </p>
         </div>
     </section>
-
-    <section>
+</section>
+    <section class="color-design">
             <div class="f">
                 <div class="h">
-                <img class="container" src="christian-wiediger-c3ZWXOv1Ndc-unsplash (1).jpg" alt="">
+                <img class="container" src="My Portfolio Pictures/christian-wiediger-c3ZWXOv1Ndc-unsplash (1).jpg" alt="">
                 <h3>My CPU</h3>
                 </div>  
                 <div class="h">
-                <img class="container" src="christian-wiediger-u03OCRlSd2M-unsplash.jpg" alt="">
+                <img class="container" src="My Portfolio Pictures/christian-wiediger-u03OCRlSd2M-unsplash.jpg" alt="">
                 <h3>I have a Gigabyte<br> Radeon x580</h3>
                 </div>
                 <div class="h">
-                <img class="container" src="amine-rock-hoovr-qoeU4a6psaQ-unsplash (1).jpg" alt="">
+                <img class="container" src="My Portfolio Pictures/amine-rock-hoovr-qoeU4a6psaQ-unsplash.jpg" alt="">
                 <h3>I built my pc/setup <br> from scratch </h3>
                 </div>
                  <div class="h">   
-                <img class="container" src="reina-kousaka-zPHftoPajis-unsplash.jpg" alt="">
-                <h3>I want to upgrade already!</h3>
+                <img class="container" src="My Portfolio Pictures/reina-kousaka-zPHftoPajis-unsplash.jpg" alt="">
+                <h3>I want to upgrade<br> already!</h3>
                 </div>
             </div>
 
             <div class="g">
                 <div class="h">
-                <img class="container" src="ella-don-s3cSol6Y6eY-unsplash.jpg"alt="">
+                <img class="container" src="My Portfolio Pictures/ella-don-s3cSol6Y6eY-unsplash.jpg"alt="">
                 <h3>I want to make<br> Youtube VIdeos!</h3>
                 </div> 
                 <div class="h">
-                <img class="container" src="wes-hicks-VZNYO4suM5o-unsplash.jpg" alt="">
+                <img class="container" src="My Portfolio Pictures/wes-hicks-VZNYO4suM5o-unsplash.jpg" alt="">
                 <h3>I'm also Learning<br> about music production.</h3>
                 </div>
                 <div class="h">    
-                <img class="container" src="marcela-laskoski-YrtFlrLo2DQ-unsplash.jpg" alt="">
+                <img class="container" src="My Portfolio Pictures/marcela-laskoski-YrtFlrLo2DQ-unsplash.jpg" alt="">
                 <h3>EDM!!!!</h3>
                 </div>
                 <div class="h">
-                <img class="container" src="marius-masalar-rPOmLGwai2w-unsplash.jpg" alt="">
+                <img class="container" src="My Portfolio Pictures/marius-masalar-rPOmLGwai2w-unsplash.jpg" alt="">
                 <h3>I played the flute <br> in high school marching band.</h3>
                 </div>
             </div>
             <br>
             <br>
             <br>
+    </section>        
 </section>
-<section>
+<section class="color-design">
             <footer>
                 <div class="j">
                     <h3>Like what you see?</h3>
