working on changes to the main content

--- a/index.html
+++ b/index.html
@@ -10,25 +10,21 @@
     <header class="header">
         <h1>Erik Trethewey</h1>
             <nav>
-            <a class="button" href="index.html">Home</a><a class="button" href="about.html">About</a><a class="button" href="Contact.html">Contact</a><a class="button" href="Projects.html">Projects</a>
+                <a class="button" href="index.html">Home</a><a class="button" href="about.html">About</a><a class="button" href="Contact.html">Contact</a><a class="button" href="Projects.html">Projects</a>
             </nav>
-        </header>
-   
+    </header>   
+<section class="info">
+    <section class="MainImg">
 
-        <section class="MainImg">
-            
-        </section>    
-<section class="i"> 
-    <!-- <section class= "MainImg">
-            
-    </section> -->
-    <section class="b">
-        <div class="c">     
-        <h2>Erik Trethewey</h2>
-        <a class="button2" href="Projects.html">My Projects</a>
-        <p>My journey with coding started out just by stumbling on how to mod video games. I never wrote the code to my video games but used mods other people created. My computer at the time wasn't able to handle the code from the new mods. So, it was time to upgrade. I then spent 9 months saving and learning how to build a pc from scratch. After completing that I realized how truely passionate I am about computers and decided to go deeper. I fell into coding from that point on. I will never look back on that decision to become Web Devloper. </p>
-        </div>
+
     </section>
+        <div>     
+            <h2>Erik Trethewey</h2>
+            <a class="button2" href="Projects.html">My Projects</a>
+            <p>
+                My journey with coding started out just by stumbling on how to mod video games. I never wrote the code to my video games but used mods other people created. My computer at the time wasn't able to handle the code from the new mods. So, it was time to upgrade. I then spent 9 months saving and learning how to build a pc from scratch. After completing that I realized how truely passionate I am about computers and decided to go deeper. I fell into coding from that point on. I will never look back on that decision to become Web Devloper. 
+            </p>
+        </div>
 </section>
     <section class="color-design">
             <div class="f">
