--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
     <header class="header">
         <h1>Erik Trethewey</h1>
             <nav>
-                <a class="button" href="index.html">Home</a><a class="button" href="about.html">About</a><a class="button" href="Contact.html">Contact</a><a class="button" href="Projects.html">Projects</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="Contact.html">Contact</a>
+                <a href="Projects.html">Projects</a>
             </nav>
     </header>   
 <section class="info">
-    <section class="MainImg">
-
-
-    </section>
+    <img src="My Portfolio Pictures/118358729_2754926151410713_4618262042568289918_n.jpg" alt="">
         <div>     
             <h2>Erik Trethewey</h2>
-            <a class="button2" href="Projects.html">My Projects</a>
+            <a href="Projects.html">My Projects</a>
+            <br>
+            <br>
             <p>
                 My journey with coding started out just by stumbling on how to mod video games. I never wrote the code to my video games but used mods other people created. My computer at the time wasn't able to handle the code from the new mods. So, it was time to upgrade. I then spent 9 months saving and learning how to build a pc from scratch. After completing that I realized how truely passionate I am about computers and decided to go deeper. I fell into coding from that point on. I will never look back on that decision to become Web Devloper. 
             </p>
@@ -74,7 +76,7 @@
                 <div class="j">
                     <h3>Like what you see?</h3>
                     <br>
-                    <a class="button3" href="Contact.html">Contact</a><a href="https://www.facebook.com/">Facebook</a><a href="https://www.instagram.com/">Instagram</a><a href="https://twitter.com/home">Twitter</a>
+                    <a href="Contact.html">Contact</a><a href="https://www.facebook.com/">Facebook</a><a href="https://www.instagram.com/">Instagram</a><a href="https://twitter.com/home">Twitter</a>
                 </div>    
             </footer>
 
