--- a/index.html
+++ b/index.html
@@ -4,79 +4,70 @@
     <link href="style/index.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Erik Trethewey Portfolio</title>
 </head>
 <body>
     <header class="header">
-        <h1>Erik Trethewey</h1>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="Contact.html">Contact</a>
-                <a href="Projects.html">Projects</a>
+                <h1>Erik Trethewey</h1>
+                <a href="index.html">Home</a><a href="about.html">About</a><a href="Contact.html">Contact</a><a href="Projects.html">Projects</a>
             </nav>
     </header>   
 <section class="info">
     <img src="My Portfolio Pictures/118358729_2754926151410713_4618262042568289918_n.jpg" alt="">
         <div>     
             <h2>Erik Trethewey</h2>
-            <a href="Projects.html">My Projects</a>
             <br>
+            <a href="Projects.html">My Projects</a>
             <br>
             <p>
                 My journey with coding started out just by stumbling on how to mod video games. I never wrote the code to my video games but used mods other people created. My computer at the time wasn't able to handle the code from the new mods. So, it was time to upgrade. I then spent 9 months saving and learning how to build a pc from scratch. After completing that I realized how truely passionate I am about computers and decided to go deeper. I fell into coding from that point on. I will never look back on that decision to become Web Devloper. 
             </p>
         </div>
 </section>
-    <section class="color-design">
-            <div class="f">
-                <div class="h">
-                <img class="container" src="My Portfolio Pictures/christian-wiediger-c3ZWXOv1Ndc-unsplash (1).jpg" alt="">
+    <section class="projects">
+                <div>
+                <img src="My Portfolio Pictures/christian-wiediger-c3ZWXOv1Ndc-unsplash (1).jpg" alt="">
                 <h3>My CPU</h3>
                 </div>  
-                <div class="h">
-                <img class="container" src="My Portfolio Pictures/christian-wiediger-u03OCRlSd2M-unsplash.jpg" alt="">
+                <div>
+                <img src="My Portfolio Pictures/christian-wiediger-u03OCRlSd2M-unsplash.jpg" alt="">
                 <h3>I have a Gigabyte<br> Radeon x580</h3>
                 </div>
-                <div class="h">
-                <img class="container" src="My Portfolio Pictures/amine-rock-hoovr-qoeU4a6psaQ-unsplash.jpg" alt="">
+                <div>
+                <img src="My Portfolio Pictures/amine-rock-hoovr-qoeU4a6psaQ-unsplash.jpg" alt="">
                 <h3>I built my pc/setup <br> from scratch </h3>
                 </div>
-                 <div class="h">   
-                <img class="container" src="My Portfolio Pictures/reina-kousaka-zPHftoPajis-unsplash.jpg" alt="">
+                 <div>   
+                <img src="My Portfolio Pictures/reina-kousaka-zPHftoPajis-unsplash.jpg" alt="">
                 <h3>I want to upgrade<br> already!</h3>
                 </div>
-            </div>
-
-            <div class="g">
-                <div class="h">
-                <img class="container" src="My Portfolio Pictures/ella-don-s3cSol6Y6eY-unsplash.jpg"alt="">
+    </section>
+    <section class="projects">
+                <div>
+                <img src="My Portfolio Pictures/ella-don-s3cSol6Y6eY-unsplash.jpg"alt="">
                 <h3>I want to make<br> Youtube VIdeos!</h3>
                 </div> 
-                <div class="h">
-                <img class="container" src="My Portfolio Pictures/wes-hicks-VZNYO4suM5o-unsplash.jpg" alt="">
+                <div>
+                <img src="My Portfolio Pictures/wes-hicks-VZNYO4suM5o-unsplash.jpg" alt="">
                 <h3>I'm also Learning<br> about music production.</h3>
                 </div>
-                <div class="h">    
-                <img class="container" src="My Portfolio Pictures/marcela-laskoski-YrtFlrLo2DQ-unsplash.jpg" alt="">
+                <div>
+                <img src="My Portfolio Pictures/marcela-laskoski-YrtFlrLo2DQ-unsplash.jpg" alt="">
                 <h3>EDM!!!!</h3>
                 </div>
-                <div class="h">
-                <img class="container" src="My Portfolio Pictures/marius-masalar-rPOmLGwai2w-unsplash.jpg" alt="">
+                <div>
+                <img src="My Portfolio Pictures/marius-masalar-rPOmLGwai2w-unsplash.jpg" alt="">
                 <h3>I played the flute <br> in high school marching band.</h3>
                 </div>
-            </div>
-            <br>
-            <br>
-            <br>
-    </section>        
+    </section>       
 </section>
 <section class="color-design">
-            <footer>
-                <div class="j">
-                    <h3>Like what you see?</h3>
-                    <br>
-                    <a href="Contact.html">Contact</a><a href="https://www.facebook.com/">Facebook</a><a href="https://www.instagram.com/">Instagram</a><a href="https://twitter.com/home">Twitter</a>
+            <footer class="j">
+                <div>
+                    <h4>Contact Me</h4>
+                    <a class="fa" href="https://www.facebook.com/">Facebook</a><a class="Inst" href="https://www.instagram.com/">Instagram</a><a class="Tw" href="https://twitter.com/home">Twitter</a>
                 </div>    
             </footer>
 
