--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+
+  <body>
+    <section class="container">
+      <h1>Erik Trethewey</h1>
+      <div>
+        <nav>
+          <a href="index.html"><button>Home</button></a>
+          <a href="about.html"><button>About</button></a>
+          <a href="Contact.html"><button>Contact</button></a>
+          <a ref="Projects.html"><button>Projects</button></a>
+        </nav>
+      </div>
+    </section>
+  </body>
 </html>
