--- a/index.html
+++ b/index.html
@@ -3,20 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="style/index.css" />
     <title>Document</title>
   </head>
 
   <body>
-    <section class="container">
-      <h1>Erik Trethewey</h1>
-      <div>
-        <nav>
+    <header>
+      <div class="top">
+        <nav class="container">
+          <h1>Erik Trethewey</h1>
           <a href="index.html"><button>Home</button></a>
           <a href="about.html"><button>About</button></a>
           <a href="Contact.html"><button>Contact</button></a>
-          <a ref="Projects.html"><button>Projects</button></a>
+          <a ref="projects.html"><button>Projects</button></a>
         </nav>
+      </div>
+    </header>
+    <img src="https://picsum.photos/300" alt="" />
+    <section class="gallery">
+      <div class="gallery2">
+        <img src="https://picsum.photos/300" alt="" />
+        <p><button>Project</button></p>
+      </div>
+      <div class="gallery2">
+        <img src="https://picsum.photos/300" alt="" />
+        <p><button>Project</button></p>
+      </div>
+      <div class="gallery2">
+        <img src="https://picsum.photos/300" alt="" />
+        <p><button>Project</button></p>
+      </div>
+      <div class="gallery2">
+        <img src="https://picsum.photos/300" alt="" />
+        <p><button>Project</button></p>
+      </div>
+      <div class="gallery2">
+        <img src="https://picsum.photos/300" alt="" />
+        <p><button>Project</button></p>
+      </div>
+      <div class="gallery2">
+        <img src="https://picsum.photos/300" alt="" />
+        <p><button>Project</button></p>
       </div>
     </section>
   </body>
