--- a/index.html
+++ b/index.html
@@ -19,32 +19,41 @@
         </nav>
       </div>
     </header>
-    <img src="https://picsum.photos/300" alt="" />
+    <div class="MainImg">
+      <img src="https://picsum.photos/1200/500" alt="" />
+    </div>
+    <div class="ImgText">
+      <h3>Erik Trethewey</h3>
+      <button class="b">Projects</button>
+    </div>
     <section class="gallery">
       <div class="gallery2">
         <img src="https://picsum.photos/300" alt="" />
-        <p><button>Project</button></p>
+        <p><button class="b">Project</button></p>
       </div>
       <div class="gallery2">
         <img src="https://picsum.photos/300" alt="" />
-        <p><button>Project</button></p>
+        <p><button class="b">Project</button></p>
       </div>
       <div class="gallery2">
         <img src="https://picsum.photos/300" alt="" />
-        <p><button>Project</button></p>
+        <p><button class="b">Project</button></p>
       </div>
       <div class="gallery2">
         <img src="https://picsum.photos/300" alt="" />
-        <p><button>Project</button></p>
+        <p><button class="b">Project</button></p>
       </div>
       <div class="gallery2">
         <img src="https://picsum.photos/300" alt="" />
-        <p><button>Project</button></p>
+        <p><button class="b">Project</button></p>
       </div>
       <div class="gallery2">
         <img src="https://picsum.photos/300" alt="" />
-        <p><button>Project</button></p>
+        <p><button class="b">Project</button></p>
       </div>
     </section>
+    <footer>
+      <button class="c">Contact Me</button>
+    </footer>
   </body>
 </html>
