--- a/index.html
+++ b/index.html
@@ -2,58 +2,62 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/index.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
 
   <body>
     <header>
-      <div class="top">
-        <nav class="container">
-          <h1>Erik Trethewey</h1>
-          <a href="index.html"><button>Home</button></a>
-          <a href="about.html"><button>About</button></a>
-          <a href="Contact.html"><button>Contact</button></a>
-          <a ref="projects.html"><button>Projects</button></a>
-        </nav>
-      </div>
+      <h1>Erik Trethewey</h1>
+      <nav>
+        <a href="index.html"><button>Home</button></a>
+        <a href="about.html"><button>About</button></a>
+        <a href="Contact.html"><button>Contact</button></a>
+        <a ref="projects.html"><button>Projects</button></a>
+      </nav>
     </header>
-    <div class="MainImg">
-      <img src="https://picsum.photos/1200/500" alt="" />
+    <div class="imgContainer">
+      <div class="MainImg">
+        <div class="ImgText">
+          <h3>Erik Trethewey</h3>
+          <button>Projects</button>
+        </div>
+      </div>
     </div>
-    <div class="ImgText">
-      <h3>Erik Trethewey</h3>
-      <button class="b">Projects</button>
-    </div>
+
     <section class="gallery">
       <div class="gallery2">
         <img src="https://picsum.photos/300" alt="" />
-        <p><button class="b">Project</button></p>
+        <p><button>Project</button></p>
       </div>
       <div class="gallery2">
         <img src="https://picsum.photos/300" alt="" />
-        <p><button class="b">Project</button></p>
+        <p><button>Project</button></p>
       </div>
       <div class="gallery2">
         <img src="https://picsum.photos/300" alt="" />
-        <p><button class="b">Project</button></p>
+        <p><button>Project</button></p>
+      </div>
+    </section>
+    <section class="gallery">
+      <div class="gallery2">
+        <img src="https://picsum.photos/300" alt="" />
+        <p><button>Project</button></p>
       </div>
       <div class="gallery2">
         <img src="https://picsum.photos/300" alt="" />
-        <p><button class="b">Project</button></p>
+        <p><button>Project</button></p>
       </div>
       <div class="gallery2">
         <img src="https://picsum.photos/300" alt="" />
-        <p><button class="b">Project</button></p>
-      </div>
-      <div class="gallery2">
-        <img src="https://picsum.photos/300" alt="" />
-        <p><button class="b">Project</button></p>
+        <p><button>Project</button></p>
       </div>
     </section>
     <footer>
-      <button class="c">Contact Me</button>
+      <div class="button">
+        <button>Contact Me</button>
+      </div>
     </footer>
   </body>
 </html>
